5.0-beta1
 * Exclude net.java.dev.jna:jna dependency from dependencies of org.caffinitas.ohc:ohc-core (CASSANDRA-18992)
 * Add UCS sstable_growth and min_sstable_size options (CASSANDRA-18945)
 * Make cqlsh's min required Python version 3.7+ instead of 3.6+ (CASSANDRA-18960)
 * Fix incorrect seeking through the sstable iterator by IndexState (CASSANDRA-18932)
 * Upgrade Python driver to 3.28.0 (CASSANDRA-18960)
 * Add retries to IR messages (CASSANDRA-18962)
 * Add metrics and logging to repair retries (CASSANDRA-18952)
 * Remove deprecated code in Cassandra 1.x and 2.x (CASSANDRA-18959)
 * ClientRequestSize metrics should not treat CONTAINS restrictions as being equality-based (CASSANDRA-18896)
Merged from 4.0:
 * Remove completed coordinator sessions (CASSANDRA-18903)


5.0-alpha2
 * Add support for vector search in SAI (CASSANDRA-18715)
 * Remove crc_check_chance from CompressionParams (CASSANDRA-18872)
 * Fix schema loading of UDTs inside vectors inside UDTs (CASSANDRA-18964)
 * Add cqlsh autocompletion for the vector data type (CASSANDRA-18946)
 * Fix nodetool tablehistograms output to avoid printing repeated information and ensure at most two arguments (CASSANDRA-18955)
 * Change the checksum algorithm SAI-related files use from CRC32 to CRC32C (CASSANDRA-18836)
 * Correctly remove Index.Group from IndexRegistry (CASSANDRA-18905)
 * Fix vector type to support DDM's mask_default function (CASSANDRA-18889)
 * Remove unnecessary reporter-config3 dependency (CASSANDRA-18907)
 * Remove support for empty values on the vector data type (CASSANDRA-18876)
 * Upgrade Dropwizard Metrics to 4.2.19 (CASSANDRA-14667)
 * Upgrade caffeine cache and fix CIDR permissions cache invalidation (CASSANDRA-18805)
 * Remove deprecated properties in CompressionParams (CASSANDRA-18742)
 * Add support for repair coordinator to retry messages that timeout (CASSANDRA-18816)
 * Upgrade slf4j-api to 1.7.36 (CASSANDRA-18882)