@@ -190,6 +190,8 @@ New features
 
 Upgrading
 ---------
+    - Default disk_access_mode value changed from "auto" to "mmap_index_only". Override this setting with "disk_access_mode: auto" on
+      cassandra.yaml to keep the previous default. See CASSANDRA-19021 for details.
     - The minimumn Python version to run cqlsh has been bumped from 3.6 to 3.7. Python 3.6 is past its end-of-life, and
       3.7 is the minimum version supported by the Python driver.
     - Java 8 has been removed. Lowest supported version is Java 11.
