@@ -1,4 +1,5 @@
 5.0-beta1
+ * Set default disk_access_mode to mmap_index_only (CASSANDRA-19021)
  * Exclude net.java.dev.jna:jna dependency from dependencies of org.caffinitas.ohc:ohc-core (CASSANDRA-18992)
  * Add UCS sstable_growth and min_sstable_size options (CASSANDRA-18945)
  * Make cqlsh's min required Python version 3.7+ instead of 3.6+ (CASSANDRA-18960)
